--- a/css/styles.css
+++ b/css/styles.css
@@ -17,3 +17,11 @@ h2 {
   color:            #54BAB9;
   font-family:      Georgia, serif;
 }
+h6 {
+  color:            #54BAB9;
+  font-family:      Georgia, serif;
+}
+h4 {
+  color:            #54BAB9;
+  font-family:      Georgia, serif;
+}
